--- a/about.html
+++ b/about.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manticore</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <title>About | Manticore</title>
 </head>
 <body>
-    <h1 class="title">Manticore</h1>
-<hr>
-<nav>
-    <ul>
-        <a href="about.html"><li>About</li></a>
-    </ul>    
-</nav>
-
+    
 </body>
 </html>
